--- a/oncoFinder2/templates/report/gsk_prj4_t5x.html
+++ b/oncoFinder2/templates/report/gsk_prj4_t5x.html
@@ -243,19 +243,19 @@ $(function(){
 <div class="row">
   <div class="col-lg-12 text-center">
     <img src='/media/report-portal/gsk_prj4_t5/g_distribution/gsk_aring.png'  />    
-    <h4>Distribution of ARING</h4>
+    <h4>Distribution of ARING property</h4>
     <hr style="width:50%"/>
     
     <img src='/media/report-portal/gsk_prj4_t5/g_distribution/gsk_clogp.png'  />    
-    <h4>Distribution of CLOGP</h4>
+    <h4>Distribution of CLOGP property</h4>
     <hr style="width:50%"/>
     
     <img src='/media/report-portal/gsk_prj4_t5/g_distribution/gsk_mw.png'  />    
-    <h4>Distribution of MW</h4>
+    <h4>Distribution of MW property</h4>
     <hr style="width:50%"/>
     
     <img src='/media/report-portal/gsk_prj4_t5/g_distribution/gsk_tpsa.png'  />    
-    <h4>Distribution of TPSA</h4>
+    <h4>Distribution of TPSA property</h4>
     <hr style="width:50%"/> 
   </div>
 </div>
