pdf-report similarity

--- a/oncoFinder2/templates/report/gsk_prj4.html
+++ b/oncoFinder2/templates/report/gsk_prj4.html
@@ -133,7 +133,7 @@
           <br/><br/>
           {%endif%}
 
-
+vonaco pic: <div id="svgdataurl" style="min-width: 800px; height: 400px; max-width: 800px; margin: 5px auto"></div>
 <center>
 <button type="button"  class="btn btn-success btn-lg center" id='btn_show_genes'>Show Data</button>
 </center>
