--- a/oncoFinder2/templates/report/gsk_prj4.html
+++ b/oncoFinder2/templates/report/gsk_prj4.html
@@ -52,8 +52,8 @@
             {%for batch in report.genegroup_set.all|batch:15%}
               
             
-            <button id='saveButton{{forloop.counter}}'>Export Vulcano to PNG</button>
-              
+           <!--   <button id='saveButton{{forloop.counter}}'>Export Vulcano to PNG</button>
+              -->
             {%endfor%}
             <ul class="list-unstyled" style='font-size: 11pt; margin: 50px 0 0 0;' >
             <li class="title">Table of contents: </li>
